--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,8 +2,17 @@ env:
   es6: true
   browser: true
   commonjs: true
+  jasmine: true
+  jest: true
 
-extends: ['htmlacademy/es6', 'plugin:react/recommended']
+extends: ['htmlacademy/es6',
+          'plugin:react/recommended',
+          'eslint:recommended',
+          'plugin:react/recommended',
+          'plugin:@typescript-eslint/recommended',
+          'prettier/@typescript-eslint',
+          'plugin:prettier/recommended'
+          ]
 
 parserOptions:
   ecmaFeatures:
@@ -11,8 +20,18 @@ parserOptions:
   ecmaVersion: 6
   sourceType: module
 
-plugins: ['react']
+rules:
+  prettier/prettier:
+    ['error',
+    'singleQuote': true
+    ]
+
+plugins: ['react', '@typescript-eslint', 'prettier']
 
 settings:
   react:
     version: '16'
+    pragma: React,
+    version: detect
+
+parser: [@typescript-eslint/parser]
