--- a/package.json
+++ b/package.json
@@ -7,20 +7,32 @@
     "eslint": "eslint --ext .jsx --ext .js src/",
     "test": "npm run eslint",
     "build": "webpack --mode production",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "lint:fix": "eslint './src/**/*.{ts,tsx}'"
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
     "@babel/preset-react": "7.10.1",
+    "@types/react": "16.9.36",
+    "@typescript-eslint/eslint-plugin": "3.3.0",
+    "@typescript-eslint/parser": "3.3.0",
     "babel-loader": "8.1.0",
     "eslint": "5.13.0",
     "eslint-config-htmlacademy": "0.5.2",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-config-react": "1.1.7",
+    "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.20.0",
+    "prettier": "2.0.5",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.11.0"
   },
   "engines": {
     "node": "10"
+  },
+  "dependencies": {
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   }
 }
