--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,6 @@
 {
-  "presets": ["@babel/preset-react"]
+  "presets": ["@babel/preset-typescript", "@babel/preset-react"],
+  "plugins": [
+    "@babel/proposal-class-properties"
+  ]
 }
