make some improvements in interfaces and resolve type conflicts in App

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -31,7 +31,5 @@ plugins: ['react', '@typescript-eslint', 'prettier']
 settings:
   react:
     version: '16'
-    pragma: React,
-    version: detect
 
-parser: [@typescript-eslint/parser]
+parser: '@typescript-eslint/parser'
