--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "description": "Учебный проект «Угадай мелодию» от HTML Academy",
   "scripts": {
-    "eslint": "eslint --ext .jsx --ext .js src/",
-    "test": "npm run eslint",
+    "eslint": "eslint --ext .tsx --ext .ts src/",
+    "test": "npm run eslint && npm run test.jest",
+    "test.jest": "jest",
     "build": "webpack --mode production",
     "start": "webpack-dev-server",
     "lint:fix": "eslint './src/**/*.{ts,tsx}'"
@@ -16,6 +17,7 @@
     "@babel/preset-react": "7.10.1",
     "@babel/preset-typescript": "^7.10.1",
     "@types/react": "^16.9.36",
+    "@types/react-router": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "babel-loader": "8.1.0",
