--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,12 @@
 {
-  "presets": ["@babel/preset-typescript", "@babel/preset-react"],
-  "plugins": [
-    "@babel/proposal-class-properties"
-  ]
+  "presets": [
+    "@babel/preset-react",
+    "@babel/preset-typescript",
+    ["@babel/preset-env", {
+      "targets": {
+        "node": "current"
+      }
+    }]
+  ],
+  "plugins": ["@babel/proposal-class-properties"]
 }
