--- a/package.json
+++ b/package.json
@@ -13,22 +13,35 @@
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-class-properties": "7.10.1",
+    "@babel/preset-env": "7.10.2",
     "@babel/preset-react": "7.10.1",
-    "@babel/preset-typescript": "^7.10.1",
-    "@types/react": "^16.9.36",
-    "@types/react-router": "^5.1.8",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
+    "@babel/preset-typescript": "7.10.1",
+    "@types/enzyme": "3.10.5",
+    "@types/enzyme-adapter-react-16": "1.0.6",
+    "@types/jest": "26.0.0",
+    "@types/nanoid": "2.1.0",
+    "@types/react": "16.9.36",
+    "@types/react-dom": "16.9.8",
+    "@types/react-router-dom": "5.1.5",
+    "@types/react-test-renderer": "16.9.2",
+    "@types/webpack": "4.41.17",
+    "@typescript-eslint/eslint-plugin": "2.30.0",
+    "@typescript-eslint/parser": "3.2.0",
+    "babel-jest": "26.0.1",
     "babel-loader": "8.1.0",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
     "eslint": "5.13.0",
     "eslint-config-htmlacademy": "0.5.2",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-import-resolver-typescript": "2.0.0",
+    "eslint-plugin-import": "2.21.2",
     "eslint-plugin-react": "7.20.0",
-    "prettier": "^2.0.5",
-    "typescript": "^3.9.6",
+    "jest": "26.0.1",
+    "react-test-renderer": "16.13.1",
+    "source-map-loader": "1.0.0",
+    "ts-loader": "7.0.5",
+    "typescript": "3.9.5",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.11.0"
