--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "@types/nanoid": "2.1.0",
     "@types/react": "16.9.36",
     "@types/react-dom": "16.9.8",
+    "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "5.1.5",
     "@types/react-test-renderer": "16.9.2",
     "@types/webpack": "4.41.17",
-    "@typescript-eslint/eslint-plugin": "2.30.0",
-    "@typescript-eslint/parser": "3.2.0",
+    "@typescript-eslint/eslint-plugin": "3.7.0",
+    "@typescript-eslint/parser": "3.7.0",
     "babel-jest": "26.0.1",
     "babel-loader": "8.1.0",
     "enzyme": "3.11.0",
@@ -39,6 +40,7 @@
     "eslint-plugin-react": "7.20.0",
     "jest": "26.0.1",
     "react-test-renderer": "16.13.1",
+    "redux-mock-store": "1.5.4",
     "source-map-loader": "1.0.0",
     "ts-loader": "7.0.5",
     "typescript": "3.9.5",
@@ -52,6 +54,8 @@
   "dependencies": {
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-router-dom": "5.2.0"
+    "react-redux": "7.2.0",
+    "react-router-dom": "5.2.0",
+    "redux": "4.0.5"
   }
 }
