--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "jsx": "react",
     "noImplicitAny": true,
     "sourceMap": true,
-    "allowSyntheticDefaultImports": true
-  }
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node"
+  },
+  "include": ["src"]
 }
